--- a/src/index.css
+++ b/src/index.css
@@ -1568,12 +1568,12 @@ header {
 }
 
 #accia-1 .lkao-wr {
-    /*background-image: url(images/accia-1.png);*/
+    background-image: url(./assets/images/accia-1.png);
     text-align: right;
 }
 
 #accia-2 .lkao-wr {
-    /*background-image: url(images/accia-2.png);*/
+    background-image: url(./assets/images/accia-2.png);
 }
 
 .lkao-title {
@@ -2150,7 +2150,7 @@ ul {
     list-style: none;
     margin: 0;
     font-size: 18px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     height: 0px;
     transition: height 0.3s ease;
     padding: 0;
@@ -2720,7 +2720,7 @@ ul.active {
     }
 
     .lkrwir-text {
-        font-size: 14px;
+        font-size: 18px;
     }
 
     .lkrwir-tick-bttn {
