--- a/src/index.css
+++ b/src/index.css
@@ -2392,7 +2392,7 @@ ul.active {
     display: none;
 }
 
-@media (min-width: 1441px) {
+@media (min-width: 1200px) and (orientation: landscape)  {
     .tabbar {
         display: none;
     }
@@ -2403,7 +2403,7 @@ ul.active {
 }
 
 
-@media (max-width: 1440px) {
+@media (max-width: 1440px) and (orientation: portrait) {
     /*body {*/
     /*    max-width: 1080px;*/
     /*}*/
