--- a/src/index.css
+++ b/src/index.css
@@ -1535,6 +1535,8 @@ header {
     align-items: center;
 }
 
+
+
 #lk-lk-foot {
     display: flex;
     justify-content: space-around;
@@ -1551,7 +1553,7 @@ header {
 .lkm-item {
     color: #CC9933;
     text-transform: uppercase;
-    font-size: 9px;
+    font-size: 16px;
     margin-bottom: 10px;
     display: block;
 }
@@ -2573,6 +2575,7 @@ ul.active {
         flex-direction: column;
         justify-content: space-between;
         height: 100%;
+        margin-bottom: 20px;
     }
 
     .toc-i-teams div img {
