--- a/src/index.css
+++ b/src/index.css
@@ -100,11 +100,12 @@ body {
 
 
 .global-ico {
-    display: inline-block;
+    display: flex;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
     aspect-ratio: 1 / 1;
+    align-items: center;
 }
 
 .gi-coin {
