--- a/src/index.css
+++ b/src/index.css
@@ -877,11 +877,14 @@ header {
     background: #087537;
     border-radius: 5px;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .all-pop-sob .global-ico {
     width: 5px;
-    margin-left: 3px;
+    margin-left: 5px;
 }
 
 #right-col-menu {
