--- a/src/index.css
+++ b/src/index.css
@@ -893,6 +893,15 @@ header {
     border-radius: 10px;
 }
 
+/*.util {*/
+/*    transition: .4s;*/
+/*    background-color: transparent;*/
+/*}*/
+
+/*.util:hover {*/
+/*    background-color: #333;*/
+/*}*/
+
 /*.one-rcm-menu {*/
 /*    border-left: 1px solid #E6E6E6;*/
 /*    padding: 0 0 15px 15px;*/
