--- a/src/index.css
+++ b/src/index.css
@@ -1482,6 +1482,7 @@ header {
 
 #lk-ava {
     height: 75px;
+    width: 75px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
     overflow: hidden;
