--- a/src/index.css
+++ b/src/index.css
@@ -2236,13 +2236,13 @@ ul.active {
     position: fixed;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     height: 100px;
     align-items: center;
     background-color: #CC9933;
     border-radius: 18px;
     bottom: 0;
-    padding-left: 12px;
+    padding-left: 16px;
     padding-right: 12px;
     z-index: 999;
     /*left: 14px;*/
@@ -2257,6 +2257,7 @@ ul.active {
     align-items: center;
     color: #433f38;
     font-size: 14px;
+    margin-right: 16px;
 }
 
 .tabbar-item img {
