--- a/src/index.css
+++ b/src/index.css
@@ -3084,6 +3084,7 @@ ul.active {
         position: relative;
         margin-top: 62px;
         padding: 0 12px;
+        padding-bottom: 50px;
         /*padding-right: 8px;*/
         /*padding-left: 8px;*/
     }
