--- a/src/index.css
+++ b/src/index.css
@@ -2860,6 +2860,8 @@ ul.active {
         height: 100%;
         font-size: 10px;
         top: 40px;
+        padding-bottom: 60px;
+        padding-top: 20px;
     }
 
     .admin-panel-modal .close-btn {
@@ -2878,12 +2880,13 @@ ul.active {
 
     .admin-panel-modal .window .bid-items-header {
         width: 100%;
-        position: inherit;
+        position: fixed;
     }
 
     .admin-panel-modal .window .bid-item {
         height: 60px;
     }
+
 
     #top-header {
         /*display: flex;*/
