--- a/src/index.css
+++ b/src/index.css
@@ -2726,6 +2726,7 @@ ul.active {
     position: relative;
     border-radius: 8px;
     overflow-y: scroll;
+    top: 30px;
 }
 
 .admin-panel-modal .close-btn {
@@ -2749,6 +2750,10 @@ ul.active {
 .admin-panel-modal .window .bid-item {
     display: flex;
     border-bottom: 1px solid #222222;
+}
+
+.admin-panel-modal .window {
+    padding-top: 10px;
 }
 
 .admin-panel-modal .window .bid-item .field {
@@ -2793,8 +2798,25 @@ ul.active {
     display: flex;
     background-color: #222222;
     height: 40px;
-    top: 24px;
+    top: 54px;
     border-radius: 8px;
+}
+
+.admin-panel-modal .window .switchb {
+    position: fixed;
+    z-index: 99999;
+    width: 100px;
+    cursor: pointer;
+    transition: 0.6s;
+    background-color: #cc9933;
+    border: none;
+    left: 8%;
+    top: 2%;
+    border-radius: 8px;
+}
+
+.admin-panel-modal .window .switch:hover {
+    background-color: orange;
 }
 
 .exit-btn {
@@ -2823,10 +2845,11 @@ ul.active {
 }
 
 
-@media (max-width: 1440px) and (orientation: portrait) {
-    /*body {*/
-    /*    max-width: 1080px;*/
-    /*}*/
+@media (max-width: 1440px) and (orientation: landscape) {
+    .admin-panel-modal .window .switchb {
+        height: 30px;
+    }
+
     .exit-btn {
         top: 88%;
         bottom: 0;
@@ -2858,10 +2881,10 @@ ul.active {
     .admin-panel-modal .window {
         width: 100%;
         height: 100%;
-        font-size: 10px;
-        top: 40px;
+        top: 80px;
         padding-bottom: 60px;
         padding-top: 20px;
+        font-size: 9px;
     }
 
     .admin-panel-modal .close-btn {
@@ -2881,10 +2904,53 @@ ul.active {
     .admin-panel-modal .window .bid-items-header {
         width: 100%;
         position: fixed;
+        font-size: 10px;
     }
 
     .admin-panel-modal .window .bid-item {
         height: 60px;
+    }
+
+    .admin-panel-modal .window .bid-item .field {
+    }
+
+    .admin-panel-modal .window .bid-item .field:first-child {
+        border-right: 1px solid #888888;
+    }
+}
+
+
+@media (max-width: 1440px) and (orientation: portrait) {
+    /*body {*/
+    /*    max-width: 1080px;*/
+    /*}*/
+
+    .exit-btn {
+        top: 88%;
+        bottom: 0;
+        right: 20px;
+        z-index: 999;
+    }
+
+    .admin-panel .table {
+        width: 100%;
+        font-size: 10px;
+    }
+
+    .admin-panel .table .columns {
+        width: 100%;
+    }
+
+    .admin-panel .table .payouts .column:first-child {
+        border-right: 1px solid #444444;
+    }
+
+    .admin-panel .table .payouts .payout {
+        height: 50px;
+    }
+
+    .admin-panel .table .payouts .payout .column:last-child {
+        font-size: 18px;
     }
 
 
